--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AgendaApp">
+        android:theme="@style/Theme.AgendaApp"
+        android:name=".AgendaApplication">
         <activity android:name=".ui.activity.ListaAlunosActivity"
             android:exported="true">
             <intent-filter>
