--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AgendaApp"
-        android:name=".AgendaApplication">
-        <activity android:name=".ui.activity.ListaAlunosActivity"
+        android:theme="@style/Theme.AgendaApp">
+        <activity
+            android:name=".ui.activity.ListaAlunosActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
